--- a/templates/practice/problem.html
+++ b/templates/practice/problem.html
@@ -356,7 +356,7 @@
 
         <div class="card-body mb-n7">
             <h6 class="card-title fs-4">Input Format:</h6>
-            <code>{{ question.input_format }}</code>
+            <code>{{ question.input_format|linebreaks }}</code>
         </div>
 
         {% endautoescape %}
@@ -370,7 +370,7 @@
 
         <div class="card-body mb-n7">
             <h6 class="card-title fs-4">Output Format:</h6>
-            <code>{{ question.output_format }}</code>
+            <code>{{ question.output_format|linebreaks }}</code>
         </div>
 
         {% endautoescape %}
