fixed the spelling of currently in students -> batch lol

--- a/templates/student/batch/batch.html
+++ b/templates/student/batch/batch.html
@@ -396,7 +396,7 @@ active
                         <a href="{% url 'sheet' sheet.slug %}" class="btn btn-outline-secondary w-100">Continue
                             Solving</a>
                         {% else %}
-                        <a href="#" class="btn btn-outline-light-danger w-100 disabled">Curently Unavailable</a>
+                        <a href="#" class="btn btn-outline-light-danger w-100 disabled">Currently Unavailable</a>
                         {% endif %}
                     </div>
                 </a>
