--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -63,7 +63,7 @@
       </div>
 
       <div class="text-center">
-        <button type="submit" class="btn btn-lg btn-primary w-100 mb-0">Enter The
+        <button type="submit" id="login-btn" class="btn btn-lg btn-primary w-100 mb-0">Enter The
           World</button>
       </div>
       <div class="text-center mt-3 text-black-50">
