--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -62,6 +62,33 @@
                     </li> -->
                 </ul>
                 <ul class="navbar-nav ms-auto">
+                    {% if user.is_authenticated %}
+                        
+                    <li class="nav-item mx-1">
+
+                        {% if user_type == 'student' %}
+
+                        <a href="{% url 'student' %}">
+                            <button style="width: 100%;">Dashboard</button>
+                        </a>
+
+                        {% elif user_type == 'administrator' %}
+
+                        <a href="{% url 'administration' %}">
+                            <button style="width: 100%;">Dashboard</button>
+                        </a>
+                        
+                        {% endif %}
+                    </li>
+
+                    <li class="nav-item mx-1">
+                        <a href="{% url 'logout' %}">
+                            <button id="register-btn" style="width: 100%;">Logout</button>
+                        </a>
+                    </li>
+
+                    {% else %}
+
                     <li class="nav-item mx-1">
                         <a href="{% url 'login' %}">
                             <button style="width: 100%;">Login</button>
@@ -73,6 +100,8 @@
                             <button id="register-btn" style="width: 100%;">Register</button>
                         </a>
                     </li>
+
+                    {% endif %}
                 </ul>
             </div>
         </div>
