added nandini and insaan in the team page

--- a/templates/home/base.html
+++ b/templates/home/base.html
@@ -165,13 +165,13 @@
                                 <h3>Useful Links</h3>
                             </div>
                             <ul>
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">About</a></li>
-                                <li><a href="#">Services</a></li>
-                                <li><a href="#">Portfolio</a></li>
+                                <li><a href="{% url 'home' %}">Home</a></li>
+                                <li><a href="{% url 'about' %}">About</a></li>
+                                <!-- <li><a href="#">Services</a></li>
+                                <li><a href="#">Portfolio</a></li> -->
                                 <li><a href="#">Contact</a></li>
-                                <li><a href="#">Our Team</a></li>
-                                <li><a href="#">Latest Going On</a></li>
+                                <li><a href="{% url 'our_team' %}">Our Team</a></li>
+                                <!-- <li><a href="#">Latest Going On</a></li> -->
                             </ul>
                         </div>
                     </div>
