--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -9,12 +9,11 @@
 <link rel="stylesheet" href="{% static 'css/home/css/index.css' %}">
 
 <style>
-
-    body{
+    body {
         background-color: rgb(26, 26, 26);
     }
 
-    img{
+    img {
         border-radius: 5%;
     }
 
@@ -115,7 +114,7 @@
 
     @media (max-width: 500px) {
 
-        .container-block{
+        .container-block {
             padding-top: 25%;
         }
 
@@ -195,9 +194,10 @@
     }
 
     @media (max-width: 1024px) {
-        .container-block{
+        .container-block {
             padding-top: 25%;
         }
+
         .wk-ipadp-1 {
             width: 8.333333%;
         }
@@ -249,7 +249,7 @@
 
     @media (max-width: 768px) {
 
-        .container-block{
+        .container-block {
             padding-top: 25%;
         }
 
@@ -304,9 +304,10 @@
 
     @media (max-width: 500px) {
 
-        .container-block{
+        .container-block {
             padding-top: 25%;
         }
+
         .wk-mobile-1 {
             width: 8.333333%;
         }
@@ -389,7 +390,7 @@
                     <img class="team-img"
                         src="https://media.licdn.com/dms/image/v2/D5603AQEjjDCNI0SpwQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1702920234862?e=1741824000&v=beta&t=CEis53FB9uE2RqBhACb8nayRieQuXuHAzUL_eLfNP8A"
                         width="85%">
-                        
+
                 </div>
                 <div class="team-card-content">
                     <p class="text-blk name">
@@ -407,7 +408,7 @@
                     <img class="team-img"
                         src="https://media.licdn.com/dms/image/v2/D5603AQFV4cu2rVHHZw/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1709533963885?e=1741824000&v=beta&t=svuFBlvM0i-t7xVD4DWzM8osX6pCDhchE9V3-_28Dfo"
                         width="85%">
-                        
+
                 </div>
                 <div class="team-card-content">
                     <p class="text-blk name">
@@ -419,7 +420,43 @@
                 </div>
             </div>
         </div>
-    
+
+        <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+            <div class="team-card">
+                <div class="team-img-wrapper">
+                    <img class="team-img"
+                        src="https://media.licdn.com/dms/image/v2/D5603AQFA3Q0axXNkxQ/profile-displayphoto-shrink_400_400/B56ZQYuQ7jH0Ak-/0/1735581569302?e=1741824000&v=beta&t=4555Clrg5ZVyIgHfLFxLUpnBOr3XCg8PLsZejHwj-b0"
+                        width="85%">
+                </div>
+                <div class="team-card-content">
+                    <p class="text-blk name">
+                        Nandini
+                    </p>
+                    <p class="text-blk position">
+                        Video Editing Team
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
+            <div class="team-card">
+                <div class="team-img-wrapper">
+                    <img class="team-img"
+                        src="https://static.vecteezy.com/system/resources/previews/005/005/788/original/user-icon-in-trendy-flat-style-isolated-on-grey-background-user-symbol-for-your-web-site-design-logo-app-ui-illustration-eps10-free-vector.jpg"
+                        width="85%">
+                </div>
+                <div class="team-card-content">
+                    <p class="text-blk name">
+                        Ishaan Khan
+                    </p>
+                    <p class="text-blk position">
+                        Design Team
+                    </p>
+                </div>
+            </div>
+        </div>
+
         <div class="responsive-cell-block wk-desk-3 wk-mobile-12 wk-tab-4 wk-ipadp-4 team-card-container">
             <div class="team-card">
                 <div class="team-img-wrapper">
@@ -443,8 +480,7 @@
                 <div class="team-img-wrapper">
                     <img class="team-img"
                         src="https://media.licdn.com/dms/image/v2/D4E03AQHECQIZzTZdCg/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1713275914043?e=1741824000&v=beta&t=ZpYQUr8m7HHmn0CaL7sfXuXekbrg4clQMDwxzwRYPWs"
-                        width="85%"
-                        >
+                        width="85%">
                 </div>
                 <div class="team-card-content">
                     <p class="text-blk name">
@@ -456,6 +492,9 @@
                 </div>
             </div>
         </div>
+
+
+
     </div>
 </div>
 
