added ishaan photo on team page

--- a/templates/home/team.html
+++ b/templates/home/team.html
@@ -443,7 +443,7 @@
             <div class="team-card">
                 <div class="team-img-wrapper">
                     <img class="team-img"
-                        src="https://static.vecteezy.com/system/resources/previews/005/005/788/original/user-icon-in-trendy-flat-style-isolated-on-grey-background-user-symbol-for-your-web-site-design-logo-app-ui-illustration-eps10-free-vector.jpg"
+                        src="https://media.licdn.com/dms/image/v2/D5603AQHNkZy8pXwVJA/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1718273999260?e=1741824000&v=beta&t=Z2mhWLRGPg3urON920ZakO-0-sLEwiiOL47quYkqt80"
                         width="85%">
                 </div>
                 <div class="team-card-content">
